<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@color/select_checked"
        android:contentDescription="@string/content_smart" />

    <LinearLayout
        android:id="@+id/select_model_search_viewgroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/model_search_back"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:id="@+id/search_title"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/app_search_1_model" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/select_model_search_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:contentDescription="@string/content_smart"
                android:src="@drawable/model_search" />

            <EditText
                android:id="@+id/select_model_search_et_str"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/app_search_3_car_name" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/app_search_2_year" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" >

                <ImageView
                    android:id="@+id/select_model_min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/content_smart"
                    android:src="@drawable/model_search_minus" />

                <EditText
                    android:id="@+id/select_model_search_et_year"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/search_year_edit"
                    android:gravity="center"
                    android:hint="@string/app_search_4_year_hint"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textColor="@color/white" />

                <ImageView
                    android:id="@+id/select_model_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/content_smart"
                    android:src="@drawable/model_search_plus" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <include
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        layout="@layout/flipper_item_layout" />

</LinearLayout>